@@ -1,3 +1,10 @@
+2004-03-11  Vicki Murley <vicki@apple.com>
+
+        Reviewed by NOBODY (OOPS!).
+
+        * bindings/jni/jni_instance.cpp:
+        (JavaInstance::stringValue):
+
 === JavaScriptCore-125.2 ===
 
 2004-02-27  Vicki Murley  <vicki@apple.com>
